--- a/GreenLine/Info.plist
+++ b/GreenLine/Info.plist
@@ -11,5 +11,9 @@
 		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-SemiBold.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Greenline Force wants to access camera to take pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Greenline Force wants to access photos to upload selected media to server</string>
 </dict>
 </plist>
